Fix: Moved somes files to improve readability

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,7 +5,7 @@ footer {
     left: 0;
     width: 100%;
     color: white;
-    margin-top: 50vh; /* A Retirer quand on aura du contenu sur toutes les pages */
+    /* margin-top: 50vh; A Retirer quand on aura du contenu sur toutes les pages */
 }
 
 footer .container {
